--- a/codex-cli/package.json
+++ b/codex-cli/package.json
@@ -36,6 +36,7 @@
     "file-type": "^20.1.0",
     "ink": "^5.2.0",
     "ink-select-input": "^6.0.0",
+    "keytar": "^7.9.0",
     "marked": "^15.0.7",
     "marked-terminal": "^7.3.0",
     "meow": "^13.2.0",
